[gd_scene load_steps=29 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://platform_metroidvania asset pack v1.01/enemies sprites/slime/slime_walk_anim_strip_15.png" type="Texture" id=2]
[ext_resource path="res://platform_metroidvania asset pack v1.01/enemies sprites/slime/slime_death_anim_strip_6.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 208, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 9.24643, 7.88043 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 5.29445, 0.863574 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 10.0701, 7.94389 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0, -0.0717812 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.517265 )
scale = Vector2( 1.35735, 1.33145 )
frames = SubResource( 22 )
animation = "walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0555706, 8.4447 )
shape = SubResource( 23 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0.0351143, 0.0543633 )
enabled = true
cast_to = Vector2( 0, 50 )
collision_mask = 2147483650
collide_with_areas = true

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0.175064, -1.33474 )
shape = SubResource( 24 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.0932159, 8.48264 )
shape = SubResource( 25 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
